--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+basic-framework/nbproject/project.properties
+basic-framework/nbproject/project.properties
