--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ Temporary Items
 .apdisk
 basic-framework/nbproject/project.properties
 basic-framework/nbproject/project.properties
+/basic-framework/dist/
