--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Temporary Items
 basic-framework/nbproject/project.properties
 basic-framework/nbproject/project.properties
 /basic-framework/dist/
+basic-framework/nbproject/private/private.xml
