--- a/basic-framework/nbproject/project.properties
+++ b/basic-framework/nbproject/project.properties
@@ -32,12 +32,14 @@ excludes=
 file.reference.JGLSDL-linux.jar=../../progs/javagl/JGLSDL-linux.jar
 file.reference.JGLSDL.jar=C:\\Users\\ajart\\Downloads\\School\\Graphics_2\\javagl(2)\\JGLSDL.jar
 file.reference.JGLSDL.jar-1=C:\\Users\\Dude XPS\\Dropbox\\School\\Computer_Graphics_2\\JGLSDL.jar
+file.reference.JGLSDL.jar-2=JGLSDL.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.JGLSDL-linux.jar}:\
     ${file.reference.JGLSDL.jar-1}:\
-    ${file.reference.JGLSDL.jar}
+    ${file.reference.JGLSDL.jar}:\
+    ${file.reference.JGLSDL.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
