Animals.terrains package
started water

adding in animal/terrain package

made animal variables protected

--- a/basic-framework/nbproject/private/private.properties
+++ b/basic-framework/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 file.reference.JGLSDL.jar=C:\\Users\\ajart\\School\\Spring 2016\\Graphics 2\\Animal Bowling\\basic-framework\\JGLSDL.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\ajart\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Dude XPS\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
