Working on Quadtree for milestone 3
Not working yet need to fix the objects being added

--- a/basic-framework/nbproject/private/private.properties
+++ b/basic-framework/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.JGLSDL.jar=C:\\Users\\ajart\\School\\Spring 2016\\Graphics 2\\Animal Bowling\\basic-framework\\JGLSDL.jar
+file.reference.JGLSDL.jar=C:\\Users\\Dude XPS\\Downloads\\Documents\\GitHub\\Project-Giraffe\\basic-framework\\JGLSDL.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Dude XPS\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
